Skips unnecessary window icon image updates

This CL skips updating the window icon when necessary; this is
meaningful since UpdateWindowIcon will always update the
window-property for aura windows and the property change always
emits the mojo calls of copying the same pixel data when ChromeOS
with Mash. This affects the performance, especially on certain
test cases (see the referred bug).

Ideally ws protocol shouldn't send the property updates when
the pixel data is same, though it's a bit of albeit to do so.
This CL targets browser window only since it's the special case.

Bug: 922174
Test: compare the time spent for BrowserFocusTest.TabsRememberFocus
Change-Id: Ie35819d196eee06f97ef12fe52e747ed2e445c9c
Reviewed-on: https://chromium-review.googlesource.com/c/1455817
Commit-Queue: Jun Mukai <mukai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Auto-Submit: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#630237}
Former-commit-id: 467e4f10f40faeea66cae8179c7efdfa37f1538a